--- a/practice.html
+++ b/practice.html
@@ -44,12 +44,11 @@
         </div>
         <div class="Section-3">
             <div class="ol">
-                <h4>Code Lists</h4>
+                <h4>How to push code in github</h4>
                 <ol>
-                    <li>html</li>
-                    <li>css</li>
-                    <li>js</li>
-                    <li>typescript</li>
+                    <li>git add .</li>
+                    <li>git commit -m "add a message"</li>
+                    <li>git push</li>
                 </ol>
             </div>
             <div class="ul">
